--- a/ldcake-ui/theme.scss
+++ b/ldcake-ui/theme.scss
@@ -10,14 +10,14 @@ $ldc-border-color: #F2F2F2;
 $ldc-bg-color: #f3f4f6;
 
 $ldc-type-primary: #2979ff;
-$ldc-type-primary-light: #a0cfff;
+$ldc-type-primary-light: #ecf5ff;
 $ldc-type-primary-dark: #2b85e4;
-$ldc-type-primary-disabled: #ecf5ff;
+$ldc-type-primary-disabled: #a0cfff;
 
 $ldc-type-warning: #ff9900;
-$ldc-type-warning-light: #ffd283;
+$ldc-type-warning-light: #fdf6ec;
 $ldc-type-warning-dark: #fcbd71;
-$ldc-type-warning-disabled: #fdf6ec;
+$ldc-type-warning-disabled: #ffd283;
 
 $ldc-type-success: #19be6b;
 $ldc-type-success-disabled: #71d5a1;
