--- a/ldcake-ui/theme.scss
+++ b/ldcake-ui/theme.scss
@@ -2,37 +2,37 @@
 // uni.scss中引入的样式会同时混入到全局样式文件和单独每一个页面的样式中，造成微信程序包太大，
 // 故uni.scss只建议放scss变量名相关样式，其他的样式可以通过main.js或者App.vue引入
 
-$ldc-main-color: #303133;
-$ldc-content-color: #606266;
-$ldc-tips-color: #909399;
-$ldc-light-color: #c0c4cc;
-$ldc-border-color: #F2F2F2;
-$ldc-bg-color: #f3f4f6;
+$c-main-color: #303133;
+$c-content-color: #606266;
+$c-tips-color: #909399;
+$c-light-color: #c0c4cc;
+$c-border-color: #F2F2F2;
+$c-bg-color: #f3f4f6;
 
-$ldc-type-primary: #2979ff;
-$ldc-type-primary-light: #ecf5ff;
-$ldc-type-primary-dark: #2b85e4;
-$ldc-type-primary-disabled: #a0cfff;
+$c-type-primary: #2979ff;
+$c-type-primary-light: #ecf5ff;
+$c-type-primary-dark: #2b85e4;
+$c-type-primary-disabled: #a0cfff;
 
-$ldc-type-warning: #ff9900;
-$ldc-type-warning-light: #fdf6ec;
-$ldc-type-warning-dark: #fcbd71;
-$ldc-type-warning-disabled: #ffd283;
+$c-type-warning: #ff9900;
+$c-type-warning-light: #fdf6ec;
+$c-type-warning-dark: #fcbd71;
+$c-type-warning-disabled: #ffd283;
 
-$ldc-type-success: #19be6b;
-$ldc-type-success-disabled: #71d5a1;
-$ldc-type-success-dark: #18b566;
-$ldc-type-success-light: #dbf1e1;
+$c-type-success: #19be6b;
+$c-type-success-disabled: #71d5a1;
+$c-type-success-dark: #18b566;
+$c-type-success-light: #dbf1e1;
 
-$ldc-type-error: #fa3534;
-$ldc-type-error-disabled: #fab6b6;
-$ldc-type-error-dark: #dd6161;
-$ldc-type-error-light: #fef0f0;
+$c-type-error: #fa3534;
+$c-type-error-disabled: #fab6b6;
+$c-type-error-dark: #dd6161;
+$c-type-error-light: #fef0f0;
 
-$ldc-type-info: #909399;
-$ldc-type-info-disabled: #c8c9cc;
-$ldc-type-info-dark: #82848a;
-$ldc-type-info-light: #f4f4f5;
+$c-type-info: #909399;
+$c-type-info-disabled: #c8c9cc;
+$c-type-info-dark: #82848a;
+$c-type-info-light: #f4f4f5;
 
-$ldc-form-item-height: 70rpx;
-$ldc-form-item-border-color: #dcdfe6;
+$c-form-item-height: 70rpx;
+$c-form-item-border-color: #dcdfe6;
