--- a/uni.scss
+++ b/uni.scss
@@ -75,5 +75,5 @@ $uni-font-size-subtitle:36rpx;
 $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph:30rpx;
 
-// uView 样式应用
+// ldcake-ui 样式应用
 @import 'ldcake-ui/theme.scss';
