--- a/uni.scss
+++ b/uni.scss
@@ -75,5 +75,5 @@ $uni-font-size-subtitle:36rpx;
 $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph:30rpx;
 
-// ldcake-ui 样式应用
-@import 'ldcake-ui/theme.scss';
+// itriton-ui 样式应用
+@import 'itriton-ui/theme.scss';
